# Android_ProjectTemplate

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: activity_basic_recycler_view_sample_screen_vertical_recycler_view_adapter_footer_dummy_data.json  activity_basic_recycler_view_sample_screen_vertical_recycler_view_adapter_header_dummy_data.json  activity_basic_recycler_view_sample_screen_vertical_recycler_view_adapter_item_dummy_data.json  activity_basic_recycler_view_sample_screen_vertical_recycler_view_dummy_data.json  dog_kind.xlsx  jni_test.txt
app/src/main/cpp/: CMakeLists.txt  native_lib.cpp
app/src/main/cpp/jni_libs/asset_manager_test/: native_wrapper_asset_manager_test.cpp
app/src/main/cpp/jni_libs/asset_manager_test/sub_libs/: CMakeLists.txt
app/src/main/cpp/jni_libs/asset_manager_test_lib/include/: asset_manager_test_lib.h
app/src/main/cpp/jni_libs/ffmpeg_wrapper/: native_wrapper_ffmpeg_wrapper.cpp
app/src/main/cpp/jni_libs/ffmpeg_wrapper/sub_libs/: CMakeLists.txt
app/src/main/cpp/jni_libs/ffmpeg_wrapper/sub_libs/include/: ffmpeg_wrapper_lib.h
app/src/main/cpp/jni_libs/ffmpeg_wrapper/sub_libs/src/: ffmpeg_wrapper_lib.cpp
app/src/main/cpp/jni_libs/jni_string_test/: native_wrapper_jni_string_test.cpp
app/src/main/cpp/jni_libs/jni_string_test/sub_libs/: CMakeLists.txt
app/src/main/cpp/jni_libs/jni_string_test/sub_libs/include/: jni_string_test.h
app/src/main/cpp/jni_libs/jni_string_test/sub_libs/src/: jni_string_test_lib.cpp
app/src/main/cpp/jni_libs/opencv_test/: native_wrapper_opencv_test.cpp
app/src/main/cpp/libs/asset_manager_test_lib/: CMakeLists.txt
app/src/main/cpp/libs/asset_manager_test_lib/include/: asset_manager_test_lib.h
app/src/main/cpp/libs/asset_manager_test_lib/src/: asset_manager_test_lib.cpp
app/src/main/cpp/libs/jni_string_test_lib/: CMakeLists.txt
app/src/main/cpp/libs/jni_string_test_lib/include/: jni_string_test_lib.h
app/src/main/cpp/libs/jni_string_test_lib/src/: jni_string_test_lib.cpp
app/src/main/cpp/libs/lib_yuv/: CMakeLists.txt
app/src/main/cpp/libs/test1_lib/: CMakeLists.txt
app/src/main/cpp/libs/test1_lib/include/: test1_lib.h
app/src/main/cpp/libs/test1_lib/src/: test1_lib.cpp
app/src/main/cpp/libs/test2_lib/: CMakeLists.txt
app/src/main/cpp/libs/test2_lib/src/: test2_lib.cpp
app/src/main/cpp/user_lib/: native_lib.cpp
app/src/main/cpp/wrappers/: native_wrapper_asset_manager_test.cpp  native_wrapper_lib_yuv.cpp  native_wrapper_test1.cpp  native_wrapper_test2.cpp
app/src/main/java/com/example/prowd_android_template/abstract_class/: AbstractProwdRecyclerViewAdapter.kt  AbstractRecyclerViewAdapter.kt  InterfaceDialogInfoVO.kt  InterfaceUserSessionUtil.kt  ProwdRecyclerViewAdapter.kt
app/src/main/java/com/example/prowd_android_template/application_session_service/: CurrentLoginSessionInfoSpw.kt  UserSessionUtil.kt
app/src/main/java/com/example/prowd_android_template/common_global_variable_connector/: CurrentLoginSessionInfoGvc.kt
app/src/main/java/com/example/prowd_android_template/common_shared_preference_wrapper/: CurrentLoginSessionInfoSpw.kt  CustomDevicePermissionInfoSpw.kt
app/src/main/java/com/example/prowd_android_template/custom_view/: AutoFitTextureView.kt  BottomSheetDialogFragmentItemSelector1.kt  CircleImageView.java  CircleImageView.kt  DialogBinaryChoose.kt  DialogConfirm.kt  DialogProgressLoading.kt  DialogRadioButtonChoose.kt  PinchImageView.java  PinchImageView.kt
app/src/main/java/com/example/prowd_android_template/globalVariableConnector/: GvcCurrentLoginSessionInfo.kt  GvcLoginInfo.kt
app/src/main/res/drawable/: selector_menu_activity_basic_bottom_sheet_navigation_sample_bottom_nav_icon_fragment1.xml
app/src/main/res/drawable-v24/: layer_list_layout_activity_email_user_join_sample_send_email_btn.xml
app/src/main/res/layout/: activity_a_template.xml  activity_aar_module_caller_sample.xml  activity_basic_bottom_sheet_navigation_sample.xml  activity_basic_camera2_api_record_video_sample.xml  activity_basic_camera2_api_sample.xml  activity_basic_header_footer_recycler_view_sample.xml  activity_basic_horizontal_recycler_view_sample.xml  activity_basic_notification_sample.xml  activity_basic_recycler_view_sample.xml  activity_basic_recycler_view_sample_editor.xml  activity_basic_recycler_view_sample_screen_vertical_recycler_view_adapter_footer.xml  activity_basic_recycler_view_sample_screen_vertical_recycler_view_adapter_footer_loader.xml  activity_basic_recycler_view_sample_screen_vertical_recycler_view_adapter_header.xml  activity_basic_recycler_view_sample_screen_vertical_recycler_view_adapter_header_loader.xml  activity_basic_retrofit2_sample.xml  activity_basic_service_sample.xml  activity_basic_tab_layout_sample.xml  activity_basic_vertical_recycler_view_sample.xml  activity_bitmap_and_opencv_jni_sample.xml  activity_brightness_change_sample.xml  activity_broadcast_receiver_sample.xml  activity_broadcast_receiver_sample_sender.xml  activity_camera_sample_list.xml  activity_dialog_sample.xml  activity_dp_and_px_calculator.xml  activity_easy_lut_sample.xml  activity_email_user_join_sample.xml  activity_etc_sample_list.xml  activity_ffmpeg_get_video_frame_sample.xml  activity_firebase_chat_sample_add_channel.xml  activity_firebase_chat_sample_channel_list.xml  activity_firebase_chat_sample_login.xml  activity_gvc_sample.xml  activity_gvc_sample_controller.xml  activity_home.xml  activity_image_processing_sample_list.xml  activity_init.xml  activity_jni_sample.xml  activity_jni_sample_list.xml  activity_media_player_api_sample.xml  (+55 more)
app/src/main/res/menu/: activity_basic_bottom_sheet_navigation_sample_bottom_nav.xml
app/src/main/res/values/: shared_preferences_keys.xml  strings.xml  styles.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
test_module/: build.gradle
test_module/src/main/: AndroidManifest.xml
test_module_for_aar_compile/src/main/: AndroidManifest.xml
(+271 files in other folders)
